Source/WebCore/platform/graphics/filters/FEFlood.h
@@ -39,6 +39,13 @@ public:
     float floodOpacity() const;
     bool setFloodOpacity(float);
 
+#if !USE(CG)
+    // feFlood does not perform color interpolation of any kind, so the result is always in the current
+    // color space regardless of the value of color-interpolation-filters.
+    void setOperatingColorSpace(ColorSpace) OVERRIDE { FilterEffect::setResultColorSpace(ColorSpaceDeviceRGB); }
+    void setResultColorSpace(ColorSpace) OVERRIDE { FilterEffect::setResultColorSpace(ColorSpaceDeviceRGB); }
+#endif
+
     virtual void platformApplySoftware();
 #if ENABLE(OPENCL)
     virtual bool platformApplyOpenCL();
